--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
     ],
     "require": {
         "php": "^7.2",
+        "sensiolabs/security-checker": "^5.0",
         "sylius/sylius": "~1.3.0",
         "symfony/flex": "^1.1",
-        "sensiolabs/security-checker": "^5.0"
+        "symfony/webpack-encore-bundle": "dev-master"
     },
     "require-dev": {
         "behat/behat": "^3.4",
